cli/tests/snapshots/help__btrfs_reflink.snap
---
source: cli/tests/help.rs
expression: text
---
Toolbox for reflink operations: lightweight file copies that share data extents
instead of copying bytes

Usage: reflink <COMMAND>

Commands:
  clone  Lightweight file copy: data extents are shared between source and
         target instead of physically copied. Subsequent modifications are
         copy-on-write, so reading from the clone is fast and storage is only
         consumed once until the files diverge
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
