cli/tests/snapshots/help__btrfs_rescue_clear_ino_cache.snap
---
source: cli/tests/help.rs
expression: text
---
Remove leftover items pertaining to the deprecated inode cache feature

Usage: clear-ino-cache <DEVICE>

Arguments:
  <DEVICE>
          Path to the btrfs device

Options:
  -h, --help
          Print help
