cli/tests/snapshots/help__btrfs_rescue_clear_space_cache.snap
---
source: cli/tests/help.rs
expression: text
---
Completely remove the v1 or v2 free space cache

For v2, drops the FREE_SPACE_TREE root and clears the FREE_SPACE_TREE and
FREE_SPACE_TREE_VALID compat_ro flags so that the kernel rebuilds the tree on
the next mount with `space_cache=v2`.

For v1, see Stage G in transaction/PLAN.md: clearing v1 requires freeing data
extents owned by the hidden free-space-cache inodes, which the transaction crate
does not yet support.

The device must not be mounted.

Usage: clear-space-cache <VERSION> <DEVICE>

Arguments:
  <VERSION>
          Free space cache version to remove
          
          [possible values: v1, v2]

  <DEVICE>
          Path to the btrfs device

Options:
  -h, --help
          Print help (see a summary with '-h')
