cli/tests/snapshots/help__btrfs_rescue_clear_uuid_tree.snap
---
source: cli/tests/help.rs
expression: text
---
Delete uuid tree so that kernel can rebuild it at mount time

Usage: clear-uuid-tree <DEVICE>

Arguments:
  <DEVICE>
          Path to the btrfs device

Options:
  -h, --help
          Print help
