cli/tests/snapshots/help__btrfs_rescue_create_control_device.snap
---
source: cli/tests/help.rs
expression: text
---
Create /dev/btrfs-control

The btrfs control device is a character device (major 10, minor 234) used by the
btrfs kernel module for management operations. This command creates it if it is
missing, for example after a minimal system installation or when udev is not
running.

Usage: create-control-device

Options:
  -h, --help
          Print help (see a summary with '-h')
